codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_permissions_trust_sandbox_workspace_write.snap
---
source: tui/src/status/tests.rs
expression: "rendered_labels.join(\"\\n\")"
---
Workspace (trust-sandbox)
Workspace (trust-sandbox-timeout)
